data/all_generated_tests/raw_wast_tests/loop_ImproperFunctionCallorReturnHandling_879.wast
;; 10. **Test Description**: A `loop` that contains a `call` to a variadic function (a function accepting variable number of arguments) within the WebAssembly context.    - **Constraint**: Checks if variadic functions can be accurately called from within loops and return correct values.    - **Improper Handling**: Incorrect argument handling for variadic functions leading to return type mismatches or corrupted function calls.

(assert_invalid
  (module
    (func $variadic (param i32 i32) (result i32) (i32.const 0))
    (func $loop-with-variadic-call (result i32)
      (loop (result i32)
        (call $variadic (i32.const 1))
      )
    )
  )
  "type mismatch"
)